# cryptoliteICE

./: .gitignore  README.md
hardware/: README.md
host/: 99-cryptolite.rules  README.md  cryptolite-ice.py  requirements.txt
mcu/: CMakeLists.txt  README.md  build_criptolite_rp.sh  flash_writer.c  flash_writer.h  ice40.c  ice40.h  led_status.c  led_status.h  main.c  nist_health.c  nist_health.h  pins.h  protocol.c  protocol.h  rng_pipeline.c  rng_pipeline.h  sha256.c  sha256.h  spi_flash.c  spi_flash.h  spi_pio.c  spi_pio.h  spi_pio.pio  trng.c  trng.h  tusb_config.h  usb_descriptors.c
rtl/: README.md  build_cryptolite_trng_spi.sh  cryptolite_trng_spi.pcf  cryptolite_trng_spi.v  ro_cell.v  ro_trng.v  spi_trng_slave.v  tb_ro_trng.v
